Aggiornamento animazione card Mobile e stop autoplay carousel

--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ span.carousel-control-prev-icon{
     footer li.list-group-item, footer{
         font-size: 8px;
     }
+
+    div.carousel-inner{
+        overflow: visible;
+    }
 }
 
 .carousel-inner .carousel-item.active,
