--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
 }
 
+i{
+    cursor: pointer;
+}
 
 /* Logo */
 #logo-netflix{
@@ -20,6 +23,14 @@
 nav button.dropdown-toggle::after{
     content: none!important;
 }
+
+/* Dropdown UserMenu */
+.dropdown-menu.show {
+    display: block;
+    width: 250px;
+}
+
+
 
 /*  Codice Carosello */
 
